--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="audio-prompt-overlay" class="hidden">
         <div class="prompt-box">
-            <p>Please disable silent mode on device.</p>
+            <p>Please disable silent mode.</p>
             <button id="start-button">OK</button>
         </div>
     </div>
